@@ -31,18 +31,10 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.lang.management.ManagementFactory;
 import java.lang.management.OperatingSystemMXBean;
-import java.lang.reflect.InvocationHandler;
-import java.lang.reflect.Method;
-import java.lang.reflect.Proxy;
-import java.net.URI;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.FileSystem;
-import java.nio.file.FileSystemNotFoundException;
-import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
 import java.nio.file.LinkOption;
-import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayDeque;
@@ -58,7 +50,7 @@ import java.util.ListIterator;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Properties;
-import java.util.Scanner;
+import java.util.StringJoiner;
 import java.util.function.BiConsumer;
 import java.util.function.BiFunction;
 import java.util.function.Consumer;
@@ -72,35 +64,34 @@ import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import com.oracle.svm.core.configure.ConfigurationFile;
 import org.graalvm.compiler.options.OptionKey;
 import org.graalvm.compiler.serviceprovider.JavaVersionUtil;
 import org.graalvm.nativeimage.Platform;
 import org.graalvm.nativeimage.ProcessProperties;
 
 import com.oracle.graal.pointsto.api.PointstoOptions;
+import com.oracle.graal.pointsto.reports.ReportUtils;
 import com.oracle.svm.core.FallbackExecutor;
 import com.oracle.svm.core.FallbackExecutor.Options;
 import com.oracle.svm.core.OS;
 import com.oracle.svm.core.SubstrateOptions;
 import com.oracle.svm.core.SubstrateUtil;
-import com.oracle.svm.core.configure.ConfigurationFiles;
 import com.oracle.svm.core.option.SubstrateOptionsParser;
 import com.oracle.svm.core.util.ClasspathUtils;
-import com.oracle.svm.core.util.UserError;
 import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.driver.MacroOption.EnabledOption;
 import com.oracle.svm.driver.MacroOption.MacroOptionKind;
 import com.oracle.svm.driver.MacroOption.Registry;
-import com.oracle.svm.hosted.AbstractNativeImageClassLoaderSupport;
+import com.oracle.svm.driver.metainf.MetaInfFileType;
+import com.oracle.svm.driver.metainf.NativeImageMetaInfResourceProcessor;
+import com.oracle.svm.driver.metainf.NativeImageMetaInfWalker;
 import com.oracle.svm.hosted.NativeImageGeneratorRunner;
 import com.oracle.svm.hosted.NativeImageSystemClassLoader;
 import com.oracle.svm.util.ModuleSupport;
 
 public class NativeImage {
 
-    /* Used to enable native-image JPMS support (WIP) - will become default once completed */
-    static final boolean USE_NI_JPMS = System.getenv().getOrDefault("USE_NATIVE_IMAGE_JAVA_PLATFORM_MODULE_SYSTEM", "false").toLowerCase().equals("true");
+    private static final String ENV_VAR_USE_MODULE_SYSTEM = "USE_NATIVE_IMAGE_JAVA_PLATFORM_MODULE_SYSTEM";
 
     private static final String DEFAULT_GENERATOR_CLASS_NAME = NativeImageGeneratorRunner.class.getName();
     private static final String DEFAULT_GENERATOR_MODULE_NAME = ModuleSupport.getModuleName(NativeImageGeneratorRunner.class);
@@ -148,7 +139,7 @@ public class NativeImage {
 
     private static final String usageText = getResource("/Usage.txt");
 
-    class ArgumentQueue {
+    static class ArgumentQueue {
 
         private final ArrayDeque<String> queue;
         public final String argumentOrigin;
@@ -238,12 +229,11 @@ public class NativeImage {
     private static final String pKeyNativeImageArgs = "NativeImageArgs";
 
     private final ArrayList<String> imageBuilderArgs = new ArrayList<>();
+    private final LinkedHashSet<Path> imageBuilderModulePath = new LinkedHashSet<>();
     private final LinkedHashSet<Path> imageBuilderClasspath = new LinkedHashSet<>();
     private final LinkedHashSet<Path> imageBuilderBootClasspath = new LinkedHashSet<>();
-    private final LinkedHashSet<String> imageIncludeBuiltinModules = new LinkedHashSet<>();
     private final ArrayList<String> imageBuilderJavaArgs = new ArrayList<>();
     private final LinkedHashSet<Path> imageClasspath = new LinkedHashSet<>();
-    private final LinkedHashSet<Path> imageProvidedClasspath = new LinkedHashSet<>();
     private final LinkedHashSet<Path> imageModulePath = new LinkedHashSet<>();
     private final ArrayList<String> customJavaArgs = new ArrayList<>();
     private final ArrayList<String> customImageBuilderArgs = new ArrayList<>();
@@ -256,7 +246,10 @@ public class NativeImage {
     private final Map<String, String> propertyFileSubstitutionValues = new HashMap<>();
 
     private boolean verbose = Boolean.valueOf(System.getenv("VERBOSE_GRAALVM_LAUNCHERS"));
+    private boolean diagnostics = false;
+    String diagnosticsDir;
     private boolean jarOptionMode = false;
+    private boolean moduleOptionMode = false;
     private boolean dryRun = false;
     private String printFlagsOptionQuery = null;
     private String printFlagsWithExtraHelpOptionQuery = null;
@@ -266,14 +259,60 @@ public class NativeImage {
 
     private final List<ExcludeConfig> excludedConfigs = new ArrayList<>();
 
-    public static final String nativeImagePropertiesFilename = "native-image.properties";
-    public static final String nativeImageMetaInf = "META-INF/native-image";
+    protected static class BuildConfiguration {
 
-    public interface BuildConfiguration {
+        boolean modulePathBuild;
+
+        protected final Path workDir;
+        protected final Path rootDir;
+        protected final List<String> args;
+
+        BuildConfiguration(BuildConfiguration original) {
+            modulePathBuild = original.modulePathBuild;
+            workDir = original.workDir;
+            rootDir = original.rootDir;
+            args = new ArrayList<>(original.args);
+        }
+
+        protected BuildConfiguration(List<String> args) {
+            this(null, null, args);
+        }
+
+        @SuppressWarnings("deprecation")
+        BuildConfiguration(Path rootDir, Path workDir, List<String> args) {
+            modulePathBuild = Boolean.parseBoolean(System.getenv().get(ENV_VAR_USE_MODULE_SYSTEM));
+            this.args = args;
+            this.workDir = workDir != null ? workDir : Paths.get(".").toAbsolutePath().normalize();
+            if (rootDir != null) {
+                this.rootDir = rootDir;
+            } else {
+                if (IS_AOT) {
+                    Path executablePath = Paths.get(ProcessProperties.getExecutableName());
+                    assert executablePath != null;
+                    Path binDir = executablePath.getParent();
+                    Path rootDirCandidate = binDir.getParent();
+                    if (rootDirCandidate.endsWith(platform)) {
+                        rootDirCandidate = rootDirCandidate.getParent();
+                    }
+                    if (rootDirCandidate.endsWith(Paths.get("lib", "svm"))) {
+                        rootDirCandidate = rootDirCandidate.getParent().getParent();
+                    }
+                    this.rootDir = rootDirCandidate;
+                } else {
+                    String rootDirProperty = "native-image.root";
+                    String rootDirString = System.getProperty(rootDirProperty);
+                    if (rootDirString == null) {
+                        rootDirString = System.getProperty("java.home");
+                    }
+                    this.rootDir = Paths.get(rootDirString);
+                }
+            }
+        }
+
         /**
          * @return the name of the image generator main class.
          */
-        default String getGeneratorMainClass() {
+        public String getGeneratorMainClass() {
             String generatorClassName = DEFAULT_GENERATOR_CLASS_NAME;
             if (useJavaModules()) {
                 generatorClassName += DEFAULT_GENERATOR_9PLUS_SUFFIX;
@@ -285,26 +324,44 @@ public class NativeImage {
          * @return relative path usage get resolved against this path (also default path for image
          *         building)
          */
-        Path getWorkingDirectory();
+        public Path getWorkingDirectory() {
+            return workDir;
+        }
 
         /**
          * @return java.home that is associated with this BuildConfiguration
          */
-        default Path getJavaHome() {
-            throw VMError.unimplemented();
+        public Path getJavaHome() {
+            return useJavaModules() ? rootDir : rootDir.getParent();
         }
 
         /**
          * @return path to Java executable
          */
-        default Path getJavaExecutable() {
-            throw VMError.unimplemented();
+        public Path getJavaExecutable() {
+            Path binJava = Paths.get("bin", OS.getCurrent() == OS.WINDOWS ? "java.exe" : "java");
+            if (Files.isExecutable(rootDir.resolve(binJava))) {
+                return rootDir.resolve(binJava);
+            }
+
+            String javaHome = System.getenv("JAVA_HOME");
+            if (javaHome == null) {
+                throw showError("Environment variable JAVA_HOME is not set");
+            }
+            Path javaHomeDir = Paths.get(javaHome);
+            if (!Files.isDirectory(javaHomeDir)) {
+                throw showError("Environment variable JAVA_HOME does not refer to a directory");
+            }
+            if (!Files.isExecutable(javaHomeDir.resolve(binJava))) {
+                throw showError("Environment variable JAVA_HOME does not refer to a directory with a " + binJava + " executable");
+            }
+            return javaHomeDir.resolve(binJava);
         }
 
         /**
          * @return true if Java modules system should be used
          */
-        default boolean useJavaModules() {
+        public boolean useJavaModules() {
             try {
                 Class.forName("java.lang.Module");
             } catch (ClassNotFoundException e) {
@@ -316,77 +373,82 @@ public class NativeImage {
         /**
          * @return classpath for SubstrateVM image builder components
          */
-        default List<Path> getBuilderClasspath() {
-            throw VMError.unimplemented();
+        public List<Path> getBuilderClasspath() {
+            if (modulePathBuild) {
+                return Collections.emptyList();
+            }
+            List<Path> result = new ArrayList<>();
+            if (useJavaModules()) {
+                result.addAll(getJars(rootDir.resolve(Paths.get("lib", "jvmci")), "graal-sdk", "graal", "enterprise-graal"));
+            }
+            result.addAll(getJars(rootDir.resolve(Paths.get("lib", "svm", "builder"))));
+            return result;
         }
 
         /**
          * @return base clibrary paths needed for general image building
          */
-        default List<Path> getBuilderCLibrariesPaths() {
-            throw VMError.unimplemented();
+        public List<Path> getBuilderCLibrariesPaths() {
+            return Collections.singletonList(rootDir.resolve(Paths.get("lib", "svm", "clibraries")));
         }
 
         /**
          * @return path to content of the inspect web server (points-to analysis debugging)
          */
-        default Path getBuilderInspectServerPath() {
-            throw VMError.unimplemented();
+        public Path getBuilderInspectServerPath() {
+            Path inspectPath = rootDir.resolve(Paths.get("lib", "svm", "inspect"));
+            if (Files.isDirectory(inspectPath)) {
+                return inspectPath;
+            }
+            return null;
         }
 
         /**
          * @return base image classpath needed for every image (e.g. LIBRARY_SUPPORT)
          */
-        default List<Path> getImageProvidedClasspath() {
-            throw VMError.unimplemented();
+        public List<Path> getImageProvidedClasspath() {
+            return getImageProvidedJars();
         }
 
         /**
          * @return base image module-path needed for every image (e.g. LIBRARY_SUPPORT)
          */
-        default List<Path> getImageProvidedModulePath() {
-            throw VMError.unimplemented();
+        public List<Path> getImageProvidedModulePath() {
+            return getImageProvidedJars();
+        }
+
+        private List<Path> getImageProvidedJars() {
+            return getJars(rootDir.resolve(Paths.get("lib", "svm")));
         }
 
         /**
          * @return JVMCI API classpath for image builder (jvmci + graal jars)
          */
-        default List<Path> getBuilderJVMCIClasspath() {
-            throw VMError.unimplemented();
+        public List<Path> getBuilderJVMCIClasspath() {
+            return getJars(rootDir.resolve(Paths.get("lib", "jvmci")));
         }
 
         /**
          * @return entries for jvmci.class.path.append system property (if needed)
          */
-        default List<Path> getBuilderJVMCIClasspathAppend() {
-            throw VMError.unimplemented();
+        public List<Path> getBuilderJVMCIClasspathAppend() {
+            return getBuilderJVMCIClasspath().stream()
+                            .filter(f -> f.getFileName().toString().toLowerCase().endsWith("graal.jar"))
+                            .collect(Collectors.toList());
         }
 
         /**
          * @return boot-classpath for image builder (graal-sdk.jar)
          */
-        default List<Path> getBuilderBootClasspath() {
-            throw VMError.unimplemented();
+        public List<Path> getBuilderBootClasspath() {
+            return getJars(rootDir.resolve(Paths.get("lib", "boot")));
         }
 
         /**
          * @return additional arguments for JVM that runs image builder
          */
-        default List<String> getBuilderJavaArgs() {
-            String javaVersion = String.valueOf(JavaVersionUtil.JAVA_SPEC);
-            String[] flagsForVersion = graalCompilerFlags.get(javaVersion);
-            if (flagsForVersion == null) {
-                String suffix = "";
-                if (System.getProperty("java.home").contains("-dev")) {
-                    suffix = " Update SubstrateCompilerFlagsBuilder.compute_graal_compiler_flags_map() in " +
-                                    "mx_substratevm.py to add a configuration for a new Java version.";
-                }
-                showError(String.format("Image building not supported for Java version %s in %s with VM configuration \"%s\".%s",
-                                System.getProperty("java.version"),
-                                System.getProperty("java.home"),
-                                System.getProperty("java.vm.name"),
-                                suffix));
-            }
+        public List<String> getBuilderJavaArgs() {
+            ArrayList<String> builderJavaArgs = new ArrayList<>();
 
             if (useJVMCINativeLibrary == null) {
                 useJVMCINativeLibrary = false;
@@ -420,216 +482,76 @@ public class NativeImage {
                 }
             }
 
-            ArrayList<String> builderJavaArgs = new ArrayList<>();
-            builderJavaArgs.addAll(Arrays.asList(flagsForVersion));
+            String javaVersion = String.valueOf(JavaVersionUtil.JAVA_SPEC);
+            String[] flagsForVersion = graalCompilerFlags.get(javaVersion);
+            if (flagsForVersion == null) {
+                String suffix = "";
+                if (System.getProperty("java.home").contains("-dev")) {
+                    suffix = " Update SubstrateCompilerFlagsBuilder.compute_graal_compiler_flags_map() in " +
+                                    "mx_substratevm.py to add a configuration for a new Java version.";
+                }
+                showError(String.format("Image building not supported for Java version %s in %s with VM configuration \"%s\".%s",
+                                System.getProperty("java.version"),
+                                System.getProperty("java.home"),
+                                System.getProperty("java.vm.name"),
+                                suffix));
+            }
+
+            for (String line : flagsForVersion) {
+                if (!modulePathBuild && line.startsWith("--add-exports=")) {
+                    /*-
+                     * Turns e.g.
+                     * --add-exports=jdk.internal.vm.ci/jdk.vm.ci.code.stack=jdk.internal.vm.compiler,org.graalvm.nativeimage.builder
+                     * into:
+                     * --add-exports=jdk.internal.vm.ci/jdk.vm.ci.code.stack=ALL-UNNAMED
+                     */
+                    builderJavaArgs.add(line.substring(0, line.lastIndexOf('=') + 1) + "ALL-UNNAMED");
+                } else {
+                    builderJavaArgs.add(line);
+                }
+            }
+
             if (useJVMCINativeLibrary) {
                 builderJavaArgs.add("-XX:+UseJVMCINativeLibrary");
             } else {
                 builderJavaArgs.add("-XX:-UseJVMCICompiler");
             }
+
             return builderJavaArgs;
         }
 
         /**
          * @return entries for the --module-path of the image builder
          */
-        default List<Path> getBuilderModulePath() {
-            throw VMError.unimplemented();
+        public List<Path> getBuilderModulePath() {
+            List<Path> result = new ArrayList<>();
+            // Non-jlinked JDKs need truffle and graal-sdk on the module path since they
+            // don't have those modules as part of the JDK.
+            result.addAll(getJars(rootDir.resolve(Paths.get("lib", "jvmci")), "graal-sdk", "enterprise-graal"));
+            result.addAll(getJars(rootDir.resolve(Paths.get("lib", "truffle")), "truffle-api"));
+            if (modulePathBuild) {
+                result.addAll(getJars(rootDir.resolve(Paths.get("lib", "svm", "builder"))));
+            }
+            return result;
         }
 
         /**
          * @return entries for the --upgrade-module-path of the image builder
          */
-        default List<Path> getBuilderUpgradeModulePath() {
-            throw VMError.unimplemented();
+        public List<Path> getBuilderUpgradeModulePath() {
+            return getJars(rootDir.resolve(Paths.get("lib", "jvmci")), "graal", "graal-management");
         }
 
         /**
          * @return classpath for image (the classes the user wants to build an image from)
          */
-        default List<Path> getImageClasspath() {
-            throw VMError.unimplemented();
+        public List<Path> getImageClasspath() {
+            return Collections.emptyList();
         }
 
         /**
          * @return native-image (i.e. image build) arguments
          */
-        default List<String> getBuildArgs() {
-            throw VMError.unimplemented();
-        }
-
-        /**
-         * @return true for fallback image building
-         */
-        default boolean buildFallbackImage() {
-            return false;
-        }
-
-        default Path getAgentJAR() {
-            return null;
-        }
-
-        /**
-         * ResourcesJar packs resources files needed for some jdk services such as xml
-         * serialization.
-         *
-         * @return the path to the resources.jar file
-         */
-        default Optional<Path> getResourcesJar() {
-            return Optional.empty();
-        }
-    }
-
-    protected static class DefaultBuildConfiguration implements BuildConfiguration {
-        protected final Path workDir;
-        protected final Path rootDir;
-        protected final List<String> args;
-
-        protected DefaultBuildConfiguration(List<String> args) {
-            this(null, null, args);
-        }
-
-        @SuppressWarnings("deprecation")
-        DefaultBuildConfiguration(Path rootDir, Path workDir, List<String> args) {
-            this.args = args;
-            this.workDir = workDir != null ? workDir : Paths.get(".").toAbsolutePath().normalize();
-            if (rootDir != null) {
-                this.rootDir = rootDir;
-            } else {
-                if (IS_AOT) {
-                    Path executablePath = Paths.get(ProcessProperties.getExecutableName());
-                    assert executablePath != null;
-                    Path binDir = executablePath.getParent();
-                    Path rootDirCandidate = binDir.getParent();
-                    if (rootDirCandidate.endsWith(platform)) {
-                        rootDirCandidate = rootDirCandidate.getParent();
-                    }
-                    if (rootDirCandidate.endsWith(Paths.get("lib", "svm"))) {
-                        rootDirCandidate = rootDirCandidate.getParent().getParent();
-                    }
-                    this.rootDir = rootDirCandidate;
-                } else {
-                    String rootDirProperty = "native-image.root";
-                    String rootDirString = System.getProperty(rootDirProperty);
-                    if (rootDirString == null) {
-                        rootDirString = System.getProperty("java.home");
-                    }
-                    this.rootDir = Paths.get(rootDirString);
-                }
-            }
-        }
-
-        @Override
-        public Path getWorkingDirectory() {
-            return workDir;
-        }
-
-        @Override
-        public Path getJavaHome() {
-            return useJavaModules() ? rootDir : rootDir.getParent();
-        }
-
-        @Override
-        public Path getJavaExecutable() {
-            Path binJava = Paths.get("bin", OS.getCurrent() == OS.WINDOWS ? "java.exe" : "java");
-            if (Files.isExecutable(rootDir.resolve(binJava))) {
-                return rootDir.resolve(binJava);
-            }
-
-            String javaHome = System.getenv("JAVA_HOME");
-            if (javaHome == null) {
-                throw showError("Environment variable JAVA_HOME is not set");
-            }
-            Path javaHomeDir = Paths.get(javaHome);
-            if (!Files.isDirectory(javaHomeDir)) {
-                throw showError("Environment variable JAVA_HOME does not refer to a directory");
-            }
-            if (!Files.isExecutable(javaHomeDir.resolve(binJava))) {
-                throw showError("Environment variable JAVA_HOME does not refer to a directory with a " + binJava + " executable");
-            }
-            return javaHomeDir.resolve(binJava);
-        }
-
-        @Override
-        public List<Path> getBuilderClasspath() {
-            if (USE_NI_JPMS) {
-                return Collections.emptyList();
-            }
-            List<Path> result = new ArrayList<>();
-            if (useJavaModules()) {
-                result.addAll(getJars(rootDir.resolve(Paths.get("lib", "jvmci")), "graal-sdk", "graal", "enterprise-graal"));
-            }
-            result.addAll(getJars(rootDir.resolve(Paths.get("lib", "svm", "builder"))));
-            return result;
-        }
-
-        @Override
-        public List<Path> getBuilderCLibrariesPaths() {
-            return Collections.singletonList(rootDir.resolve(Paths.get("lib", "svm", "clibraries")));
-        }
-
-        @Override
-        public List<Path> getImageProvidedClasspath() {
-            return getJars(rootDir.resolve(Paths.get("lib", "svm")));
-        }
-
-        @Override
-        public List<Path> getImageProvidedModulePath() {
-            if (USE_NI_JPMS) {
-                return getJars(rootDir.resolve(Paths.get("lib", "svm")));
-            }
-            return Collections.emptyList();
-        }
-
-        @Override
-        public Path getBuilderInspectServerPath() {
-            Path inspectPath = rootDir.resolve(Paths.get("lib", "svm", "inspect"));
-            if (Files.isDirectory(inspectPath)) {
-                return inspectPath;
-            }
-            return null;
-        }
-
-        @Override
-        public List<Path> getBuilderJVMCIClasspath() {
-            return getJars(rootDir.resolve(Paths.get("lib", "jvmci")));
-        }
-
-        @Override
-        public List<Path> getBuilderJVMCIClasspathAppend() {
-            return getBuilderJVMCIClasspath().stream()
-                            .filter(f -> f.getFileName().toString().toLowerCase().endsWith("graal.jar"))
-                            .collect(Collectors.toList());
-        }
-
-        @Override
-        public List<Path> getBuilderBootClasspath() {
-            return getJars(rootDir.resolve(Paths.get("lib", "boot")));
-        }
-
-        @Override
-        public List<Path> getBuilderModulePath() {
-            List<Path> result = new ArrayList<>();
-            if (USE_NI_JPMS) {
-                result.addAll(getJars(rootDir.resolve(Paths.get("lib", "svm", "builder"))));
-            } else {
-                result.addAll(getJars(rootDir.resolve(Paths.get("lib", "jvmci")), "graal-sdk", "enterprise-graal"));
-                result.addAll(getJars(rootDir.resolve(Paths.get("lib", "truffle")), "truffle-api"));
-            }
-            return result;
-        }
-
-        @Override
-        public List<Path> getBuilderUpgradeModulePath() {
-            return getJars(rootDir.resolve(Paths.get("lib", "jvmci")), "graal", "graal-management");
-        }
-
-        @Override
-        public List<Path> getImageClasspath() {
-            return Collections.emptyList();
-        }
-
-        @Override
         public List<String> getBuildArgs() {
             if (args.isEmpty()) {
                 return Collections.emptyList();
@@ -641,14 +563,74 @@ public class NativeImage {
             return buildArgs;
         }
 
-        @Override
+        /**
+         * @return true for fallback image building
+         */
+        public boolean buildFallbackImage() {
+            return false;
+        }
+
         public Path getAgentJAR() {
             return rootDir.resolve(Paths.get("lib", "svm", "builder", "svm.jar"));
         }
 
-        @Override
+        /**
+         * ResourcesJar packs resources files needed for some jdk services such as xml
+         * serialization.
+         *
+         * @return the path to the resources.jar file
+         */
         public Optional<Path> getResourcesJar() {
             return Optional.of(rootDir.resolve(Paths.get("lib", "resources.jar")));
+        }
+    }
+
+    class DriverMetaInfProcessor implements NativeImageMetaInfResourceProcessor {
+        @Override
+        public void processMetaInfResource(Path classpathEntry, Path resourceRoot, Path resourcePath, MetaInfFileType type) throws IOException {
+            NativeImageArgsProcessor args = NativeImage.this.new NativeImageArgsProcessor(resourcePath.toUri().toString());
+            Path componentDirectory = resourceRoot.relativize(resourcePath).getParent();
+            Function<String, String> resolver = str -> {
+                int nameCount = componentDirectory.getNameCount();
+                String optionArg = null;
+                if (nameCount > 2) {
+                    String optionArgKey = componentDirectory.subpath(2, nameCount).toString();
+                    optionArg = propertyFileSubstitutionValues.get(optionArgKey);
+                }
+                return resolvePropertyValue(str, optionArg, componentDirectory, config);
+            };
+
+            if (type == MetaInfFileType.Properties) {
+                Map<String, String> properties = loadProperties(Files.newInputStream(resourcePath));
+                String imageNameValue = properties.get("ImageName");
+                if (imageNameValue != null) {
+                    addCustomImageBuilderArgs(injectHostedOptionOrigin(oHName + resolver.apply(imageNameValue), resourcePath.toUri().toString()));
+                }
+                forEachPropertyValue(properties.get("JavaArgs"), NativeImage.this::addImageBuilderJavaArgs, resolver);
+                forEachPropertyValue(properties.get("Args"), args, resolver);
+            } else {
+                args.accept(oH(type.optionKey) + resourceRoot.relativize(resourcePath));
+            }
+            args.apply(true);
+        }
+
+        @Override
+        public void showWarning(String message) {
+            if (isVerbose()) {
+                NativeImage.showWarning(message);
+            }
+        }
+
+        @Override
+        public void showVerboseMessage(String message) {
+            NativeImage.this.showVerboseMessage(isVerbose(), message);
+        }
+
+        @Override
+        public boolean isExcluded(Path resourcePath, Path classpathEntry) {
+            return excludedConfigs.stream()
+                            .filter(e -> e.jarPattern.matcher(classpathEntry.toString()).find())
+                            .anyMatch(e -> e.resourcePattern.matcher(resourcePath.toString()).find());
         }
     }
 
@@ -717,40 +699,36 @@ public class NativeImage {
         return buildArgs;
     }
 
-    private static final class FallbackBuildConfiguration implements InvocationHandler {
-        private final NativeImage original;
-        private final List<String> buildArgs;
+    private static final class FallbackBuildConfiguration extends BuildConfiguration {
+
+        private final List<String> fallbackBuildArgs;
 
         private FallbackBuildConfiguration(NativeImage original) {
-            this.original = original;
-            this.buildArgs = original.createFallbackBuildArgs();
-        }
-
-        static BuildConfiguration create(NativeImage imageName) {
-            FallbackBuildConfiguration handler = new FallbackBuildConfiguration(imageName);
-            BuildConfiguration fallback = (BuildConfiguration) Proxy.newProxyInstance(BuildConfiguration.class.getClassLoader(),
-                            new Class<?>[]{BuildConfiguration.class},
-                            handler);
-            return fallback;
+            super(original.config);
+            fallbackBuildArgs = original.createFallbackBuildArgs();
         }
 
         @Override
-        public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
-            switch (method.getName()) {
-                case "getImageClasspath":
-                    return Collections.emptyList();
-                case "getBuildArgs":
-                    return buildArgs;
-                case "buildFallbackImage":
-                    return true;
-                default:
-                    return method.invoke(original.config, args);
-            }
+        public List<Path> getImageClasspath() {
+            return Collections.emptyList();
+        }
+
+        @Override
+        public List<String> getBuildArgs() {
+            return fallbackBuildArgs;
+        }
+
+        @Override
+        public boolean buildFallbackImage() {
+            return true;
         }
     }
 
+    private final DriverMetaInfProcessor metaInfProcessor;
+
     protected NativeImage(BuildConfiguration config) {
         this.config = config;
+        this.metaInfProcessor = new DriverMetaInfProcessor();
 
         String configFileEnvVarKey = "NATIVE_IMAGE_CONFIG_FILE";
         String configFile = System.getenv(configFileEnvVarKey);
@@ -768,7 +746,7 @@ public class NativeImage {
         /* Discover supported MacroOptions */
         optionRegistry = new MacroOption.Registry();
 
-        /* Default handler needs to be fist */
+        /* Default handler needs to be first */
         defaultOptionHandler = new DefaultOptionHandler(this);
         registerOptionHandler(defaultOptionHandler);
         apiOptionHandler = new APIOptionHandler(this);
@@ -812,7 +790,6 @@ public class NativeImage {
     }
 
     private void prepareImageBuildArgs() {
-        config.getBuilderJavaArgs().forEach(this::addImageBuilderJavaArgs);
         addImageBuilderJavaArgs("-Xss10m");
         addImageBuilderJavaArgs(oXms + getXmsValue());
         String xmxVal = getXmxValue(1);
@@ -830,49 +807,11 @@ public class NativeImage {
         addImageBuilderJavaArgs("-Dcom.oracle.graalvm.isaot=true");
         addImageBuilderJavaArgs("-Djava.system.class.loader=" + CUSTOM_SYSTEM_CLASS_LOADER);
 
-        if (OS.getCurrent() == OS.LINUX && JavaVersionUtil.JAVA_SPEC >= 11) {
-            addImageBuilderJavaArgs("-Dawt.toolkit=sun.awt.X11.XToolkit");
-            addImageBuilderJavaArgs("-Djava.awt.graphicsenv=sun.awt.X11GraphicsEnvironment");
-            addImageBuilderJavaArgs("-Djava.awt.printerjob=sun.print.PSPrinterJob");
-        }
-
         /*
          * The presence of CDS and custom system class loaders disables the use of archived
          * non-system class and and triggers a warning.
          */
         addImageBuilderJavaArgs("-Xshare:off");
-        config.getBuilderClasspath().forEach(this::addImageBuilderClasspath);
-        config.getImageProvidedClasspath().forEach(this::addImageProvidedClasspath);
-
-        if (config.getBuilderInspectServerPath() != null) {
-            addPlainImageBuilderArg(oHInspectServerContentPath + config.getBuilderInspectServerPath());
-        }
-
-        if (config.useJavaModules()) {
-            String modulePath = config.getBuilderModulePath().stream()
-                            .map(this::canonicalize).map(Path::toString)
-                            .collect(Collectors.joining(File.pathSeparator));
-            if (!modulePath.isEmpty()) {
-                addImageBuilderJavaArgs(Arrays.asList("--module-path", modulePath));
-            }
-            String upgradeModulePath = config.getBuilderUpgradeModulePath().stream()
-                            .map(p -> canonicalize(p).toString())
-                            .collect(Collectors.joining(File.pathSeparator));
-            if (!upgradeModulePath.isEmpty()) {
-                addImageBuilderJavaArgs(Arrays.asList("--upgrade-module-path", upgradeModulePath));
-            }
-        } else {
-            config.getBuilderJVMCIClasspath().forEach((Consumer<? super Path>) this::addImageBuilderClasspath);
-            if (!config.getBuilderJVMCIClasspathAppend().isEmpty()) {
-                String builderJavaArg = config.getBuilderJVMCIClasspathAppend()
-                                .stream().map(path -> canonicalize(path).toString())
-                                .collect(Collectors.joining(File.pathSeparator, "-Djvmci.class.path.append=", ""));
-                addImageBuilderJavaArgs(builderJavaArg);
-            }
-
-            config.getBuilderBootClasspath().forEach((Consumer<? super Path>) this::addImageBuilderBootClasspath);
-            config.getResourcesJar().ifPresent(this::addImageBuilderClasspath);
-        }
 
         config.getImageClasspath().forEach(this::addCustomImageClasspath);
     }
@@ -946,118 +885,16 @@ public class NativeImage {
         }
     }
 
-    enum MetaInfFileType {
-        Properties(null, nativeImagePropertiesFilename),
-        JniConfiguration(ConfigurationFiles.Options.JNIConfigurationResources, ConfigurationFile.JNI.getFileName()),
-        ReflectConfiguration(ConfigurationFiles.Options.ReflectionConfigurationResources, ConfigurationFile.REFLECTION.getFileName()),
-        ResourceConfiguration(ConfigurationFiles.Options.ResourceConfigurationResources, ConfigurationFile.RESOURCES.getFileName()),
-        ProxyConfiguration(ConfigurationFiles.Options.DynamicProxyConfigurationResources, ConfigurationFile.DYNAMIC_PROXY.getFileName()),
-        SerializationConfiguration(ConfigurationFiles.Options.SerializationConfigurationResources, ConfigurationFile.SERIALIZATION.getFileName()),
-        SerializationDenyConfiguration(ConfigurationFiles.Options.SerializationDenyConfigurationResources, ConfigurationFile.SERIALIZATION_DENY.getFileName()),
-        PredefinedClassesConfiguration(ConfigurationFiles.Options.PredefinedClassesConfigurationResources, ConfigurationFile.PREDEFINED_CLASSES_NAME.getFileName());
-
-        final OptionKey<?> optionKey;
-        final String fileName;
-
-        MetaInfFileType(OptionKey<?> optionKey, String fileName) {
-            this.optionKey = optionKey;
-            this.fileName = fileName;
-        }
-    }
-
-    interface NativeImageMetaInfResourceProcessor {
-        void processMetaInfResource(Path classpathEntry, Path resourceRoot, Path resourcePath, MetaInfFileType type, Function<String, String> resolver) throws IOException;
-    }
-
     private void processClasspathNativeImageMetaInf(Path classpathEntry) {
-        processClasspathNativeImageMetaInf(classpathEntry, this::processNativeImageMetaInf);
-    }
-
-    private void processClasspathNativeImageMetaInf(Path classpathEntry, NativeImageMetaInfResourceProcessor metaInfProcessor) {
         try {
-            if (Files.isDirectory(classpathEntry)) {
-                Path nativeImageMetaInfBase = classpathEntry.resolve(Paths.get(nativeImageMetaInf));
-                processNativeImageMetaInf(classpathEntry, nativeImageMetaInfBase, metaInfProcessor);
-            } else {
-                List<Path> jarFileMatches = Collections.emptyList();
-                if (classpathEntry.endsWith(ClasspathUtils.cpWildcardSubstitute)) {
-                    try {
-                        jarFileMatches = Files.list(classpathEntry.getParent())
-                                        .filter(ClasspathUtils::isJar)
-                                        .collect(Collectors.toList());
-                    } catch (NoSuchFileException e) {
-                        /* Fallthrough */
-                    }
-                } else if (ClasspathUtils.isJar(classpathEntry)) {
-                    jarFileMatches = Collections.singletonList(classpathEntry);
-                }
-
-                for (Path jarFile : jarFileMatches) {
-                    URI jarFileURI = URI.create("jar:" + jarFile.toUri());
-                    FileSystem probeJarFS;
-                    try {
-                        probeJarFS = FileSystems.newFileSystem(jarFileURI, Collections.emptyMap());
-                    } catch (UnsupportedOperationException e) {
-                        probeJarFS = null;
-                        if (isVerbose()) {
-                            showWarning(ClasspathUtils.classpathToString(classpathEntry) + " does not describe valid jarfile" + (jarFileMatches.size() > 1 ? "s" : ""));
-                        }
-                    }
-                    if (probeJarFS != null) {
-                        try (FileSystem jarFS = probeJarFS) {
-                            Path nativeImageMetaInfBase = jarFS.getPath("/" + nativeImageMetaInf);
-                            processNativeImageMetaInf(jarFile, nativeImageMetaInfBase, metaInfProcessor);
-                        }
-                    }
-                }
-            }
-        } catch (IOException | FileSystemNotFoundException e) {
-            throw showError("Invalid classpath entry " + ClasspathUtils.classpathToString(classpathEntry), e);
-        }
-    }
-
-    private void processNativeImageMetaInf(Path classpathEntry, Path nativeImageMetaInfBase, NativeImageMetaInfResourceProcessor metaInfProcessor) throws IOException {
-        if (Files.isDirectory(nativeImageMetaInfBase)) {
-            for (MetaInfFileType fileType : MetaInfFileType.values()) {
-                List<Path> nativeImageMetaInfFiles = Files.walk(nativeImageMetaInfBase)
-                                .filter(p -> p.endsWith(fileType.fileName))
-                                .collect(Collectors.toList());
-                for (Path nativeImageMetaInfFile : nativeImageMetaInfFiles) {
-                    boolean excluded = isExcluded(nativeImageMetaInfFile, classpathEntry);
-                    if (excluded) {
-                        continue;
-                    }
-
-                    Path resourceRoot = nativeImageMetaInfBase.getParent().getParent();
-                    Function<String, String> resolver = str -> {
-                        Path componentDirectory = resourceRoot.relativize(nativeImageMetaInfFile).getParent();
-                        int nameCount = componentDirectory.getNameCount();
-                        String optionArg = null;
-                        if (nameCount > 2) {
-                            String optionArgKey = componentDirectory.subpath(2, nameCount).toString();
-                            optionArg = propertyFileSubstitutionValues.get(optionArgKey);
-                        }
-                        return resolvePropertyValue(str, optionArg, componentDirectory, config);
-                    };
-                    showVerboseMessage(isVerbose(), "Apply " + nativeImageMetaInfFile.toUri());
-                    try {
-                        metaInfProcessor.processMetaInfResource(classpathEntry, resourceRoot, nativeImageMetaInfFile, fileType, resolver);
-                    } catch (NativeImageError err) {
-                        showError("Processing " + nativeImageMetaInfFile.toUri() + " failed", err);
-                    }
-                }
-            }
+            NativeImageMetaInfWalker.walkMetaInfForCPEntry(classpathEntry, metaInfProcessor);
+        } catch (NativeImageMetaInfWalker.MetaInfWalkException e) {
+            throw showError(e.getMessage(), e.cause);
         }
     }
 
     public void addExcludeConfig(Pattern jarPattern, Pattern resourcePattern) {
         excludedConfigs.add(new ExcludeConfig(jarPattern, resourcePattern));
-    }
-
-    private boolean isExcluded(Path resourcePath, Path classpathEntry) {
-        return excludedConfigs.stream()
-                        .filter(e -> e.jarPattern.matcher(classpathEntry.toString()).find())
-                        .anyMatch(e -> e.resourcePattern.matcher(resourcePath.toString()).find());
     }
 
     static String injectHostedOptionOrigin(String option, String origin) {
@@ -1080,24 +917,6 @@ public class NativeImage {
             }
         }
         return option;
-    }
-
-    private void processNativeImageMetaInf(@SuppressWarnings("unused") Path classpathEntry, Path resourceRoot,
-                    Path resourcePath, MetaInfFileType resourceType, Function<String, String> resolver) throws IOException {
-
-        NativeImageArgsProcessor args = new NativeImageArgsProcessor(resourcePath.toUri().toString());
-        if (resourceType == MetaInfFileType.Properties) {
-            Map<String, String> properties = loadProperties(Files.newInputStream(resourcePath));
-            String imageNameValue = properties.get("ImageName");
-            if (imageNameValue != null) {
-                addCustomImageBuilderArgs(injectHostedOptionOrigin(oHName + resolver.apply(imageNameValue), resourcePath.toUri().toString()));
-            }
-            forEachPropertyValue(properties.get("JavaArgs"), this::addImageBuilderJavaArgs, resolver);
-            forEachPropertyValue(properties.get("Args"), args, resolver);
-        } else {
-            args.accept(oH(resourceType.optionKey) + resourceRoot.relativize(resourcePath));
-        }
-        args.apply(true);
     }
 
     static void processManifestMainAttributes(Path path, BiConsumer<Path, Attributes> manifestConsumer) {
@@ -1169,6 +988,33 @@ public class NativeImage {
     private int completeImageBuild() {
         List<String> leftoverArgs = processNativeImageArgs();
 
+        config.getBuilderClasspath().forEach(this::addImageBuilderClasspath);
+
+        if (config.getBuilderInspectServerPath() != null) {
+            addPlainImageBuilderArg(oHInspectServerContentPath + config.getBuilderInspectServerPath());
+        }
+
+        if (config.useJavaModules()) {
+            config.getBuilderModulePath().forEach(this::addImageBuilderModulePath);
+            String upgradeModulePath = config.getBuilderUpgradeModulePath().stream()
+                            .map(p -> canonicalize(p).toString())
+                            .collect(Collectors.joining(File.pathSeparator));
+            if (!upgradeModulePath.isEmpty()) {
+                addImageBuilderJavaArgs(Arrays.asList("--upgrade-module-path", upgradeModulePath));
+            }
+        } else {
+            config.getBuilderJVMCIClasspath().forEach((Consumer<? super Path>) this::addImageBuilderClasspath);
+            if (!config.getBuilderJVMCIClasspathAppend().isEmpty()) {
+                String builderJavaArg = config.getBuilderJVMCIClasspathAppend()
+                                .stream().map(path -> canonicalize(path).toString())
+                                .collect(Collectors.joining(File.pathSeparator, "-Djvmci.class.path.append=", ""));
+                addImageBuilderJavaArgs(builderJavaArg);
+            }
+
+            config.getBuilderBootClasspath().forEach((Consumer<? super Path>) this::addImageBuilderBootClasspath);
+            config.getResourcesJar().ifPresent(this::addImageBuilderClasspath);
+        }
+
         completeOptionArgs();
         addTargetArguments();
 
@@ -1195,9 +1041,6 @@ public class NativeImage {
         // The following two are for backwards compatibility reasons. They should be removed.
         imageBuilderJavaArgs.add("-Djdk.internal.lambda.eagerlyInitialize=false");
         imageBuilderJavaArgs.add("-Djava.lang.invoke.InnerClassLambdaMetafactory.initializeLambdas=false");
-        if (!imageIncludeBuiltinModules.isEmpty()) {
-            imageBuilderJavaArgs.add("-D" + AbstractNativeImageClassLoaderSupport.PROPERTY_IMAGEINCLUDEBUILTINMODULES + "=" + String.join(",", imageIncludeBuiltinModules));
-        }
 
         /* After JavaArgs consolidation add the user provided JavaArgs */
         boolean afterOption = false;
@@ -1251,10 +1094,10 @@ public class NativeImage {
                 boolean hasMainClass = mainClass != null && !mainClass.isEmpty();
                 if (extraImageArgs.isEmpty()) {
                     if (buildExecutable && !hasMainClassModule && !hasMainClass) {
-                        String moduleMsg = USE_NI_JPMS ? " (or <module>/<mainclass>)" : "";
+                        String moduleMsg = config.modulePathBuild ? " (or <module>/<mainclass>)" : "";
                         showError("Please specify class" + moduleMsg + " containing the main entry point method. (see --help)");
                     }
-                } else {
+                } else if (!moduleOptionMode) {
                     /* extraImageArgs main-class overrules previous main-class specification */
                     explicitMainClass = true;
                     mainClass = extraImageArgs.remove(0);
@@ -1300,22 +1143,27 @@ public class NativeImage {
             showError(leftoverArgs.stream().collect(Collectors.joining(", ", prefix, "")));
         }
 
+        LinkedHashSet<Path> finalImageModulePath = new LinkedHashSet<>(imageModulePath);
         LinkedHashSet<Path> finalImageClasspath = new LinkedHashSet<>(imageBuilderBootClasspath);
         finalImageClasspath.addAll(imageClasspath);
-        if (!finalImageClasspath.isEmpty()) {
-            finalImageClasspath.addAll(imageProvidedClasspath);
-        }
 
-        LinkedHashSet<Path> finalImageModulePath = new LinkedHashSet<>(imageModulePath);
-        if (!finalImageModulePath.isEmpty()) {
-            finalImageModulePath.addAll(config.getImageProvidedModulePath());
+        List<Path> imageProvidedJars;
+        if (config.modulePathBuild) {
+            imageProvidedJars = config.getImageProvidedModulePath();
+            finalImageModulePath.addAll(imageProvidedJars);
+        } else {
+            imageProvidedJars = config.getImageProvidedClasspath();
+            finalImageClasspath.addAll(imageProvidedJars);
         }
+        imageProvidedJars.forEach(this::processClasspathNativeImageMetaInf);
 
         if (!config.buildFallbackImage() && imageBuilderArgs.contains(oHFallbackThreshold + SubstrateOptions.ForceFallback)) {
             /* Bypass regular build and proceed with fallback image building */
             return 2;
         }
-        return buildImage(imageBuilderJavaArgs, imageBuilderBootClasspath, imageBuilderClasspath, imageBuilderArgs, finalImageClasspath, finalImageModulePath);
+
+        List<String> finalImageBuilderJavaArgs = Stream.concat(config.getBuilderJavaArgs().stream(), imageBuilderJavaArgs.stream()).collect(Collectors.toList());
+        return buildImage(finalImageBuilderJavaArgs, imageBuilderBootClasspath, imageBuilderClasspath, imageBuilderModulePath, imageBuilderArgs, finalImageClasspath, finalImageModulePath);
     }
 
     private static String getLocationAgnosticArgPrefix(String argPrefix) {
@@ -1388,7 +1236,7 @@ public class NativeImage {
         if (!agentOptions.isEmpty()) {
             args.add("-agentlib:native-image-diagnostics-agent=" + agentOptions);
         }
-        args.add("-javaagent:" + config.getAgentJAR().toAbsolutePath().toString() + (agentOptions.isEmpty() ? "" : "=" + agentOptions));
+        args.add("-javaagent:" + config.getAgentJAR().toAbsolutePath() + (agentOptions.isEmpty() ? "" : "=" + agentOptions));
         return args;
     }
 
@@ -1415,7 +1263,7 @@ public class NativeImage {
 
         String[] parts = targetPlatform.split("-");
         if (parts.length != 2) {
-            throw UserError.abort("--target argument must be in format <OS>-<architecture>");
+            throw NativeImage.showError("--target argument must be in format <OS>-<architecture>");
         }
 
         targetOS = parts[0];
@@ -1451,58 +1299,96 @@ public class NativeImage {
         return result;
     }
 
+    protected static String createVMInvocationArgumentFile(List<String> arguments) {
+        try {
+            Path argsFile = Files.createTempFile("vminvocation", ".args");
+            StringJoiner joiner = new StringJoiner("\n");
+            for (String arg : arguments) {
+                // Options in @argfile need to be properly quoted as
+                // this relies on the JDK's @argfile parsing when the
+                // native image generator is being launched.
+                String quoted = SubstrateUtil.quoteShellArg(arg);
+                // @argfile rules for Windows quirk: backslashes don't need to be
+                // escaped if the option they are used in isn't quoted. If it is
+                // though, then they need to be escaped. This might mean that
+                // user-supplied arguments containing '\' will be double escaped.
+                if (quoted.startsWith("'")) {
+                    quoted = quoted.replace("\\", "\\\\");
+                }
+                joiner.add(quoted);
+            }
+            String joinedOptions = joiner.toString();
+            Files.write(argsFile, joinedOptions.getBytes());
+            argsFile.toFile().deleteOnExit();
+            return "@" + argsFile;
+        } catch (IOException e) {
+            throw showError(e.getMessage());
+        }
+    }
+
     protected static String createImageBuilderArgumentFile(List<String> imageBuilderArguments) {
         try {
-            Path argsFile = Files.createTempFile("native-image", "args");
+            Path argsFile = Files.createTempFile("native-image", ".args");
             String joinedOptions = String.join("\0", imageBuilderArguments);
             Files.write(argsFile, joinedOptions.getBytes());
-            Runtime.getRuntime().addShutdownHook(new Thread() {
-                @Override
-                public void run() {
-                    try {
-                        Files.delete(argsFile);
-                    } catch (IOException e) {
-                        System.err.println("Failed to delete temporary image builder arguments file: " + argsFile.toString());
-                    }
-                }
-            });
+            argsFile.toFile().deleteOnExit();
             return NativeImageGeneratorRunner.IMAGE_BUILDER_ARG_FILE_OPTION + argsFile.toString();
         } catch (IOException e) {
             throw showError(e.getMessage());
         }
     }
 
-    protected int buildImage(List<String> javaArgs, LinkedHashSet<Path> bcp, LinkedHashSet<Path> cp, ArrayList<String> imageArgs, LinkedHashSet<Path> imagecp, LinkedHashSet<Path> imagemp) {
-        /* Construct ProcessBuilder command from final arguments */
-        List<String> command = new ArrayList<>();
-        command.add(canonicalize(config.getJavaExecutable()).toString());
-        command.addAll(javaArgs);
+    protected int buildImage(List<String> javaArgs, LinkedHashSet<Path> bcp, LinkedHashSet<Path> cp, LinkedHashSet<Path> mp, ArrayList<String> imageArgs, LinkedHashSet<Path> imagecp,
+                    LinkedHashSet<Path> imagemp) {
+        List<String> arguments = new ArrayList<>();
+        arguments.addAll(javaArgs);
         if (!bcp.isEmpty()) {
-            command.add(bcp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator, "-Xbootclasspath/a:", "")));
+            arguments.add(bcp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator, "-Xbootclasspath/a:", "")));
         }
 
         if (!cp.isEmpty()) {
-            command.addAll(Arrays.asList("-cp", cp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator))));
+            arguments.addAll(Arrays.asList("-cp", cp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator))));
         }
-        if (USE_NI_JPMS) {
-            command.addAll(Arrays.asList("--module", DEFAULT_GENERATOR_MODULE_NAME + "/" + DEFAULT_GENERATOR_CLASS_NAME));
+        if (!mp.isEmpty()) {
+            List<String> strings = Arrays.asList("--module-path", mp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator)));
+            arguments.addAll(strings);
+        }
+
+        if (config.modulePathBuild) {
+            arguments.addAll(Arrays.asList("--module", DEFAULT_GENERATOR_MODULE_NAME + "/" + DEFAULT_GENERATOR_CLASS_NAME));
         } else {
-            command.add(config.getGeneratorMainClass());
+            arguments.add(config.getGeneratorMainClass());
         }
         if (IS_AOT && OS.getCurrent().hasProcFS) {
             /*
              * GR-8254: Ensure image-building VM shuts down even if native-image dies unexpected
              * (e.g. using CTRL-C in Gradle daemon mode)
              */
-            command.addAll(Arrays.asList(SubstrateOptions.WATCHPID_PREFIX, "" + ProcessProperties.getProcessID()));
+            arguments.addAll(Arrays.asList(SubstrateOptions.WATCHPID_PREFIX, "" + ProcessProperties.getProcessID()));
         }
         List<String> finalImageBuilderArgs = createImageBuilderArgs(imageArgs, imagecp, imagemp);
-        List<String> completeCommandList = Stream.concat(command.stream(), finalImageBuilderArgs.stream()).collect(Collectors.toList());
+
+        /* Construct ProcessBuilder command from final arguments */
+        List<String> command = new ArrayList<>();
+        command.add(canonicalize(config.getJavaExecutable()).toString());
+        List<String> completeCommandList = new ArrayList<>(command);
+        if (config.useJavaModules()) { // Only in JDK9+ 'java' executable supports @argFiles.
+            command.add(createVMInvocationArgumentFile(arguments));
+        } else {
+            command.addAll(arguments);
+        }
         command.add(createImageBuilderArgumentFile(finalImageBuilderArgs));
 
-        showVerboseMessage(isVerbose() || dryRun, "Executing [");
-        showVerboseMessage(isVerbose() || dryRun, SubstrateUtil.getShellCommandString(completeCommandList, true));
-        showVerboseMessage(isVerbose() || dryRun, "]");
+        completeCommandList.addAll(Stream.concat(arguments.stream(), finalImageBuilderArgs.stream()).collect(Collectors.toList()));
+        final String commandLine = SubstrateUtil.getShellCommandString(completeCommandList, true);
+        if (isDiagnostics()) {
+            // write to the diagnostics dir
+            ReportUtils.report("command line arguments", diagnosticsDir, "command-line", "txt", printWriter -> printWriter.write(commandLine));
+        } else {
+            showVerboseMessage(isVerbose() || dryRun, "Executing [");
+            showVerboseMessage(isVerbose() || dryRun, commandLine);
+            showVerboseMessage(isVerbose() || dryRun, "]");
+        }
 
         if (dryRun) {
             return 0;
@@ -1514,6 +1400,9 @@ public class NativeImage {
         try {
             ProcessBuilder pb = new ProcessBuilder();
             pb.command(command);
+            if (config.modulePathBuild) {
+                pb.environment().put(ENV_VAR_USE_MODULE_SYSTEM, Boolean.toString(true));
+            }
             p = pb.inheritIO().start();
             exitStatus = p.waitFor();
         } catch (IOException | InterruptedException e) {
@@ -1529,7 +1418,7 @@ public class NativeImage {
     private static final Function<BuildConfiguration, NativeImage> defaultNativeImageProvider = config -> new NativeImage(config);
 
     public static void main(String[] args) {
-        performBuild(new DefaultBuildConfiguration(Arrays.asList(args)), defaultNativeImageProvider);
+        performBuild(new BuildConfiguration(Arrays.asList(args)), defaultNativeImageProvider);
     }
 
     public static void build(BuildConfiguration config) {
@@ -1537,7 +1426,7 @@ public class NativeImage {
     }
 
     public static void agentBuild(Path javaHome, Path workDir, List<String> buildArgs) {
-        performBuild(new DefaultBuildConfiguration(javaHome, workDir, buildArgs), NativeImage::new);
+        performBuild(new BuildConfiguration(javaHome, workDir, buildArgs), NativeImage::new);
     }
 
     private static void performBuild(BuildConfiguration config, Function<BuildConfiguration, NativeImage> nativeImageProvider) {
@@ -1575,7 +1464,7 @@ public class NativeImage {
             int buildStatus = nativeImage.completeImageBuild();
             if (buildStatus == 2) {
                 /* Perform fallback build */
-                build(FallbackBuildConfiguration.create(nativeImage), nativeImageProvider);
+                build(new FallbackBuildConfiguration(nativeImage), nativeImageProvider);
                 showWarning("Image '" + nativeImage.imageName +
                                 "' is a fallback image that requires a JDK for execution " +
                                 "(use --" + SubstrateOptions.OptionNameNoFallback +
@@ -1616,16 +1505,16 @@ public class NativeImage {
         }
     }
 
+    public void addImageBuilderModulePath(Path modulePathEntry) {
+        imageBuilderModulePath.add(canonicalize(modulePathEntry));
+    }
+
     void addImageBuilderClasspath(Path classpath) {
         imageBuilderClasspath.add(canonicalize(classpath));
     }
 
     void addImageBuilderBootClasspath(Path classpath) {
         imageBuilderBootClasspath.add(canonicalize(classpath));
-    }
-
-    public void addImageIncludeBuiltinModules(String moduleName) {
-        imageIncludeBuiltinModules.add(moduleName);
     }
 
     void addImageBuilderJavaArgs(String... javaArgs) {
@@ -1679,20 +1568,6 @@ public class NativeImage {
     }
 
     /**
-     * For adding classpath elements that are only on the classpath in the context of native-image
-     * building. I.e. that are not on the classpath when the application would be run with the java
-     * command. (library-support.jar)
-     */
-    private void addImageProvidedClasspath(Path classpath) {
-        VMError.guarantee(imageClasspath.isEmpty() && customImageClasspath.isEmpty());
-        Path classpathEntry = canonicalize(classpath);
-        if (imageProvidedClasspath.add(classpathEntry)) {
-            processManifestMainAttributes(classpathEntry, this::handleClassPathAttribute);
-            processClasspathNativeImageMetaInf(classpathEntry);
-        }
-    }
-
-    /**
      * For adding classpath elements that are automatically put on the image-classpath.
      */
     void addImageClasspath(Path classpath) {
@@ -1701,45 +1576,8 @@ public class NativeImage {
 
     LinkedHashSet<String> builderModuleNames = null;
 
-    LinkedHashSet<String> getBuilderModuleNames() {
-        if (builderModuleNames == null) {
-            ProcessBuilder pb = new ProcessBuilder();
-            List<String> command = pb.command();
-            command.add(config.getJavaExecutable().toString());
-            command.add("--module-path");
-            command.add(Stream.concat(config.getBuilderModulePath().stream(), config.getImageProvidedModulePath().stream())
-                            .map(this::canonicalize).map(Path::toString)
-                            .collect(Collectors.joining(File.pathSeparator)));
-            command.add("--list-modules");
-            pb.redirectErrorStream();
-            Process process = null;
-            int exitValue = -1;
-            LinkedHashSet<String> modules = new LinkedHashSet<>();
-            String message = "Unable to determine image builder modules";
-            try {
-                process = pb.start();
-                try (Scanner scanner = new Scanner(process.getInputStream())) {
-                    while (scanner.hasNextLine()) {
-                        String token = scanner.next();
-                        modules.add(token.split("@", 2)[0]);
-                        scanner.nextLine();
-                    }
-                }
-                exitValue = process.waitFor();
-            } catch (IOException | InterruptedException e) {
-                throw showError(message, e);
-            } finally {
-                if (process != null) {
-                    process.destroy();
-                }
-                if (exitValue != 0) {
-                    throw showError(message + " (nonzero exit value)");
-                }
-            }
-
-            builderModuleNames = modules;
-        }
-        return builderModuleNames;
+    void addImageModulePath(Path modulePathEntry) {
+        addImageModulePath(modulePathEntry, true);
     }
 
     void addImageModulePath(Path modulePathEntry, boolean strict) {
@@ -1763,17 +1601,8 @@ public class NativeImage {
             /* Duplicate entries are silently ignored like with the java command */
             return;
         }
-        List<String> moduleNames = ModuleAccess.getModuleNames(mpEntry);
-        if (moduleNames.size() == 1) {
-            String moduleName = moduleNames.get(0);
-            if (getBuilderModuleNames().contains(moduleName)) {
-                /* Modules provided by the image-builder are not allowed on the -imagemp */
-                String modulePathEntryStr = "module " + moduleName + " from " + modulePathEntry;
-                showWarning("Ignoring " + modulePathEntryStr + " (implicitly provided by builder)");
-                return;
-            }
-        }
 
+        config.modulePathBuild = true;
         imageModulePath.add(mpEntry);
         processClasspathNativeImageMetaInf(mpEntry);
     }
@@ -1832,12 +1661,29 @@ public class NativeImage {
         verbose = val;
     }
 
+    void setDiagnostics(boolean val) {
+        diagnostics = val;
+        diagnosticsDir = Paths.get("reports", ReportUtils.timeStampedFileName("diagnostics", "")).toString();
+        if (val) {
+            verbose = true;
+        }
+    }
+
     void setJarOptionMode(boolean val) {
         jarOptionMode = val;
     }
 
+    void setModuleOptionMode(boolean val) {
+        moduleOptionMode = val;
+        config.modulePathBuild = true;
+    }
+
     boolean isVerbose() {
         return verbose;
+    }
+
+    boolean isDiagnostics() {
+        return diagnostics;
     }
 
     boolean useDebugAttach() {
